/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package magma;

option go_package = "magma/orc8r/cloud/go/services/streamer/test_utils/mconfig/test_protos";

message Message1 {
    string field = 1;
}

message Message2 {
    string field1 = 1;
    string field2 = 2;
}
